# voxl-vm

./: .gitignore  Cargo.toml  README.md  file_format.txt
benches/: bench_individual_instructions.rs
src/vxlvm-bin/: README.md  cli_args.rs  file_operations.rs  handler.rs  main.rs
src/vxlvm-lib/: error.rs  lib.rs  loader.rs  validator.rs
src/vxlvm-lib/vm/: machine.rs  memory.rs  mod.rs  registers.rs  stack.rs
tests/: basic_vm_tests.rs
tests/execution_result_tests/: arithmetic_instructions.rs  assembled_tests.rs  basic_instructions.rs  control_flow_instructions.rs  handler.rs  memory_instructions.rs  mod.rs
