[package]
name = "vxlvm"
version = "0.1.1"
authors = ["aidos9 <20310468+aidos9@users.noreply.github.com>"]
edition = "2021"

[lib]
name = "vxlvm"
path = "src/vxlvm-lib/lib.rs"

[[bin]]
name = "vxlvm"
path = "src/vxlvm-bin/main.rs"
required-features = ["with-binary"]

[features]
default = ["with-binary"]
with-binary = ["clap"]

[dependencies]
either = { version = "1.6", features = [] }
paste = "1.0"
sha2 = { version = "0.10", features = [] }
sha3 = { version = "0.10", features = [] }
digest = { version = "0.10", features = [] }
vxl-iset = { git = "https://github.com/Voxeon/vxl-iset", branch = "main" }
clap = { version = "3.0", features = ["derive", "wrap_help", "color"], optional = true }

[dev-dependencies]
criterion = "0.3"
hex = "0.4"

[[bench]]
name = "bench_individual_instructions"
harness = false